--- a/style.css
+++ b/style.css
@@ -270,3 +270,43 @@ li{
     padding: 10px;
     color: black;
 }
+/* sezione 8 */
+#sez8{
+    width: 100%;
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.ss8{
+    width: 900px;
+    display: flex;
+    justify-content: space-around;
+}
+h2{
+    font-size: 35px;
+    text-align: center;
+}
+.card{
+     width: 300px;
+     display: flex;
+     flex-direction: column;
+     padding-right: 20px;
+     
+}
+.business{
+    width: 300px;
+}
+.ctitle{
+    font-size: 25px;
+}
+.cp{
+    padding-top: 20px;
+}
+#cbigtitle{
+    font-size: 40px;
+    width: 900px;
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 60px;
+}
