--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a{
 }
 #accedi{
     background-color: #0061ff;
-    color:white;
+    color: white;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 15px;
@@ -359,4 +359,70 @@ h2{
     padding-bottom: 10px;
     padding-right: 20px;
     padding-left: 20px;
+}
+/* sezione 12 */
+#sez12{
+    height: 500px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+#ss12{
+    width: 900px;
+    margin-top: 100px;
+}
+#sp12{
+    border-bottom: solid rgb(194, 192, 192) 2px;
+    padding-bottom: 50px;
+}
+#title12{
+    font-size: 40px;
+}
+.difference{
+    height: 80px;
+    display: flex;
+    align-items: center;
+    border-bottom: solid rgb(194, 192, 192) 2px;
+    justify-content:space-between;
+    padding-right: 30px;
+}
+/* sezione 13 */
+#sez13{
+    width: 100%;
+    height: 550px;
+    background-color: black;
+    justify-content: center;
+    display: flex;
+}
+#ss13{
+    margin-top: 80px;
+    width: 1200px;
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 0;
+}
+.sss13{
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    line-height: 40px;
+}
+.cf1{
+    color: white;
+    font-size: 20px;
+}
+.cf{
+    color: white;
+    
+}
+#spacer{
+    margin-top: 100px;
+    margin-bottom: 50px;
+    height: 2px;
+    width: 100px;
+    background-color: white;
+}
+#it{
+    color: grey;
 }
